<resources>
    <string name="app_name">Luma Shop</string>
    <string name="left_texture">Left Texture</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is now very easy to reach\nthe base quality among\nProducts in the internet</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="splash_logo_desc">Luma Shop</string>
    <string name="luma_shop">LUMA SHOP</string>
    <string name="texture_right">Texture Right\n</string>
    <string name="start">Start</string>
    <string name="luma">LUMA</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="do_you_have_an_account_log_in">Do you have an account? log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="blurybg">bluryBG</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="dimensions">Dimensions</string>
    <string name="color">Color</string>
    <string name="confirm_password">Confirm Password</string>
</resources>