<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/left_texture"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTexture"
        app:layout_constraintDimensionRatio="1:2.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
        android:background="@drawable/ellips"
        android:layout_marginTop="50dp"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/tvRightAddressForShopping"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvRightAddressMargin"
        android:gravity="center"
        android:text="@string/luma_shop"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@id/ellipse"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvQuality"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="center"
        android:text="@string/quality"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
        app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
        app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/texture_right"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="-5dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        style="@style/GreenButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/tvQuality"
        app:layout_constraintStart_toStartOf="@id/tvQuality"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="633dp" />
</androidx.constraintlayout.widget.ConstraintLayout>